# yolov8-detection-onnx-cpp-examples

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: detection_model_y8.h  onnx_model_wrapper.h
src/: detection_model_y8.cc  main.cc  onnx_model_wrapper.cc
